# madi-stack

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  PLANNING.md  README.md  cliff.toml  rust-toolchain.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config-gen/: Cargo.toml
crates/config-gen/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/downloader/: Cargo.toml
crates/downloader/src/: extract.rs  lib.rs
crates/downloader/tests/: http.rs  phpmyadmin_extract.rs
crates/firewall/: Cargo.toml
crates/firewall-helper/: Cargo.toml  app.manifest
crates/firewall-helper/src/: main.rs
crates/firewall/src/: elevated.rs  lib.rs
crates/logs/: Cargo.toml
crates/logs/src/: lib.rs
crates/services/: Cargo.toml
crates/services/examples/: job_smoke.rs
crates/services/src/: job.rs  lib.rs  ports.rs  secrets.rs  supervisor.rs
crates/sources/: Cargo.toml
crates/sources/src/: lib.rs  mariadb.rs  nginx.rs  php.rs  phpmyadmin.rs
crates/state-store/: Cargo.toml
crates/state-store/src/: lib.rs
crates/system-helper/: Cargo.toml  app.manifest  app.rc  build.rs
crates/system-helper/src/: main.rs
crates/updater/: Cargo.toml
crates/updater/src/: lib.rs
docs/: architecture.md  auto-update-setup.md  php-versions.md  troubleshooting.md
docs/screenshots/: README.md
frontend/: .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: events.ts  i18n.ts  ipc.ts  theme.ts  tour.ts  version.ts
frontend/src/lib/components/: Coachmark.svelte  EventLog.svelte  LogViewer.svelte  ServicePage.svelte  Sidebar.svelte  StatusLed.svelte
frontend/src/lib/locales/: de.json  en.json  es.json  hu.json  it.json  lv.json  nl.json  pl.json  pt-BR.json  ro.json  ru.json  tr.json  zh-CN.json
frontend/src/routes/: Atualizacoes.svelte  Configuracoes.svelte  Firewall.svelte  Geral.svelte  MariaDB.svelte  Nginx.svelte  PHP.svelte  Sites.svelte  Sobre.svelte
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: backup.rs  commands.rs  install.rs  main.rs  mariadb_auth.rs  mkcert.rs  state.rs  tray.rs  version_probe.rs
templates/: my.ini.tera  nginx.conf.tera  php.ini.tera  phpmyadmin.config.inc.php.tera  site-default.conf.tera
