[package]
name = "madi-downloader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Streaming downloader with SHA256 verification and zip extraction."

[lints]
workspace = true

[dependencies]
madi-core  = { workspace = true }
reqwest    = { workspace = true }
tokio      = { workspace = true }
tokio-util = { workspace = true }
futures    = { workspace = true }
bytes      = { workspace = true }
sha2       = { workspace = true }
hex        = { workspace = true }
zip        = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
