[package]
name = "madi-services"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Process supervisor for Nginx, PHP-CGI and MariaDB."

[lints]
workspace = true

[dependencies]
madi-core   = { workspace = true }
tokio       = { workspace = true }
parking_lot = { workspace = true }
sysinfo     = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
