[package]
name = "madi-state-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Load/save madistack.toml (installed versions, ports, prefs)."

[lints]
workspace = true

[dependencies]
madi-core = { workspace = true }
serde     = { workspace = true }
toml      = { workspace = true }
semver    = { workspace = true }
thiserror = { workspace = true }
tracing   = { workspace = true }
