[package]
name = "madi-updater"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Checks, downloads and swaps component updates atomically."

[lints]
workspace = true

[dependencies]
madi-core       = { workspace = true }
madi-sources    = { workspace = true }
madi-downloader = { workspace = true }
reqwest         = { workspace = true }
semver          = { workspace = true }
thiserror       = { workspace = true }
tokio           = { workspace = true }
tracing         = { workspace = true }
